Merge remote-tracking branch 'origin/main'
# Conflicts:
#	README.md
#	src/main/java/com/quant/database/BacktestRepository.java
#	src/main/java/com/quant/database/CandlestickRepository.java
#	src/main/java/com/quant/database/DatabaseManager.java
#	src/main/java/com/quant/database/TradingRepository.java